Let the admin define branches and modules
